--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 	<div class="container">
 	    <div class="row justify-content-center align-items-center">
 	        <div class="col-md-6 col-md-offset-3">
-	            <h1>Login</h1>
+	            <h4>LOGIN</h4>
 	            <form th:action="@{/login}" method="post" autocomplete="off">
 	                <div th:if="${param.error}">
 	                    <div class="alert alert-danger">
