--- a/src/main/resources/templates/mitarbeitereinheit.html
+++ b/src/main/resources/templates/mitarbeitereinheit.html
@@ -7,11 +7,14 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
 <title>Mitarbeitertyp-Einheitentyp</title>
 </head>
 <body>
-	<h3>Einen neuen Mitarbeitertyp-Einheitentyp hinzuf&uuml;gen</h3>
-		
+	<head th:replace="/fragment/header :: header"></head>
+<h3>Der Einheit Mitarbeitertypen zuweisen:</h3>
+<div class="container">		
     <form action="#" th:action="@{/mitarbeitereinheit}" th:object="${mitarbeitertyp_einheitentyp}" method="post">
     	
     	<p class="error-message"
@@ -19,47 +22,49 @@
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>    	
        	
-       	<div class="form-group"
+       	<div class="row"
         th:classappend="${#fields.hasErrors('einheitentyp')}? 'has-error':''">
-        <label for="einheitentyp" class="control-label">Einheitentyp</label>
-        <p th:text="${mitarbeitertyp_einheitentyp.einheitentyp.name}"></p>
+        <label for="einheitentyp">Einheitentyp:</label>
+        <p th:text="${mitarbeitertyp_einheitentyp.einheitentyp.name}" style="font-size: 22px; color:darkred; text-decoration: underline;"></p>
 		<p class="error-message"
        	th:each="error: ${#fields.errors('einheitentyp')}"
         th:text="${error}">Validation error</p>
        	</div>     		
     	
-    	<div class="form-group"
-        th:classappend="${#fields.hasErrors('manzahl')}? 'has-error':''">
-        <label for="manzahl" class="control-label">Anzahl</label>
-        <input id="manzahl"
-        type="number"
-        min="1"
-        class="form-control"
-        th:field="*{manzahl}"/>
-        <p class="error-message"
-       	th:each="error: ${#fields.errors('manzahl')}"
-        th:text="${error}">Validation error</p>
-       	</div>
-       	
-       	<div class="form-group"
+    	<div class="row"
         th:classappend="${#fields.hasErrors('mitarbeitertyp')}? 'has-error':''">
+        <div class="col-50">
         <label for="mitarbeitertyp" class="control-label">Mitarbeitertyp</label>
         <select th:field="*{mitarbeitertyp}">
   			<option th:each="mitarbeitertyp : ${alleMitarbeitertypen}" 
          	 th:value="${mitarbeitertyp.id}" 
        	     th:text="${mitarbeitertyp.kuerzel}"></option>
-		</select></p>
+		</select>
+		</div>
 		<p class="error-message"
        	th:each="error: ${#fields.errors('mitarbeitertyp')}"
         th:text="${error}">Validation error</p>
-       	</div>   
+       	</div>  
+    	
+    	<div class="row"
+        th:classappend="${#fields.hasErrors('manzahl')}? 'has-error':''">
+        <div class="col-50">
+        <label for="manzahl" class="control-label">Anzahl</label>
+        <input id="manzahl" type="number" min="1" th:field="*{manzahl}"/>
+        </div>
+        <p class="error-message"
+       	th:each="error: ${#fields.errors('manzahl')}"
+        th:text="${error}">Validation error</p>
+       	</div>
 	
-        <p><input type="submit" value="Submit" /> </p>
+        <p><input type="submit" value="Submit" />
+        	
+        </p>
     </form>
-
-<h2>Übersicht Mitarbeitertyp-Einheitentyp</h2>
+</div>
+<h2>Übersicht zugewiesener Mitarbeitertypen</h2>
 <div th:unless="${#lists.isEmpty(mitarbeitereinheiten)}">
-<table class="table table-striped">
+<table class="mainTable" id="sortTable">
 <thead>
 <tr>
 <th>Einheitentyp</th>
@@ -73,22 +78,30 @@
 <td th:text="${mitarbeitertyp_einheitentyp.manzahl}"></td>
 <td th:text="${mitarbeitertyp_einheitentyp.mitarbeitertyp.kuerzel}"></td>
 <td>
-<a href="#" data-th-href="@{/miteinupdate/{id}(id=${mitarbeitertyp_einheitentyp.id})}">&Auml;ndern</a>
+	<a href="#" data-th-href="@{/miteinupdate/{id}(id=${mitarbeitertyp_einheitentyp.id})}">
+	<input type="button" value="Ändern" class="buttons">
+	</a>
 </td>
 </tr>
 </table>
 </div>
 <div th:if="${#lists.isEmpty(mitarbeitereinheiten)}">
-<p>Es gibt kein Mitarbeitertyp-Einheitentyp</p>
+<p>Es gibt noch keine Zuweisungen..</p>
 </div>
 <hr/>
 <div class="container">
+<input type="button" value="Zurück" class="bigButtons" onClick="gotoEinheitentyp()"/>
+        	<script>
+        	function gotoEinheitentyp() {
+			    window.location.href="../einheitentyp";
+		     }
+        	</script>
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
 
             <div th:if="${param.success}">
                 <div class="alert alert-info">
-                    Der neue Mitarbeitertyp-Einheitentyp wurde erfolgreich eingetragen!
+                    Die neue Zuweisung des Mitarbeitertyp zu der Einheit wurde erfolgreich eingetragen!
                 </div>
             </div>
             <div th:if="${param.loeschen}">
@@ -96,8 +109,10 @@
                     Die Mitarbeitertyp-Einheitentyp wurde erfolgreich gelöscht!
                 </div>
             </div>
-
+         </div>
+	</div>
 </div>
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/sortTable.js}"/></script>
 </body>
