--- a/src/main/resources/templates/einheitentyp.html
+++ b/src/main/resources/templates/einheitentyp.html
@@ -8,15 +8,16 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
- 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
  	<title>Einheitentyp</title>
 </head>
-	<body>
+<body>
 		<head th:replace="/fragment/header :: header"></head>	
-		<div th:replace="/fragment/footer :: footer"></div>
 
 	<h3>Einen neuen Einheitentyp hinzuf&uuml;gen</h3>
+<div class="container">
     <form action="#" th:action="@{/einheitentyp}" th:object="${einheitentyp}" method="post">
     
 	    <p class="error-message"
@@ -24,12 +25,12 @@
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>
                    
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
+        <div class="col-50">
         <label for="name" class="control-label">Name</label>
-        <input id="name"
-        class="form-control"
-        th:field="*{name}"/>
+        <input type="text" id="name" th:field="*{name}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('name')}"
         th:text="${error}">Validation error</p>
@@ -37,11 +38,11 @@
 		
         <p><input type="submit" value="Submit" /> </p>
     </form>
-
+</div>
 <h2>Übersicht Einheitentypen</h2>
 
 <div th:unless="${#lists.isEmpty(einheitentypen)}">
-<table class="table table-striped">
+<table class="mainTable" id="sortTable">
 <thead>
 <tr>
 <th>Name</th>
@@ -51,13 +52,19 @@
 <tr>
 <td th:text="${einheitentyp.name}"></td>
 <td>
-<a href="#" data-th-href="@{/einheitentypupdate/{id}(id=${einheitentyp.id})}">&Auml;ndern</a>
+	<a href="#" data-th-href="@{/einheitentypupdate/{id}(id=${einheitentyp.id})}">
+	<input type="button" value="Ändern" class="buttons"/>
+	</a>
 </td>
 <td>
-<a href="#" data-th-href="@{/mitarbeitereinheit/{id}(id=${einheitentyp.id})}"> -> Mitarbeitertyp</a>
+	<a href="#" data-th-href="@{/mitarbeitereinheit/{id}(id=${einheitentyp.id})}">
+	<input type="button" value="Mitarbeitertyp" class="buttons"/>
+	</a>
 </td>
 <td>
-<a href="#" data-th-href="@{/materialeinheit/{id}(id=${einheitentyp.id})}"> -> Materialtyp</a>
+	<a href="#" data-th-href="@{/materialeinheit/{id}(id=${einheitentyp.id})}">
+	<input type="button" value="Materialtyp" class="buttons"/>
+	</a>
 </td>
 </tr>
 </table>
@@ -75,7 +82,7 @@
                     Der neue Einheitentyp wurde erfolgreich eingetragen!
                 </div>
             </div>
-			            <div th:if="${param.loeschen}">
+			<div th:if="${param.loeschen}">
                 <div class="alert alert-info">
                     Der Einheitentyp wurde erfolgreich gelöscht!
                 </div>
@@ -86,7 +93,10 @@
                     Der Einheitentyp wurde nicht geändert!
                 </div>
             </div>
+        </div>
+     </div>
 </div>
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/sortTable.js}"/></script>
 </body>
