--- a/src/main/resources/templates/lieferung.html
+++ b/src/main/resources/templates/lieferung.html
@@ -1,92 +1,104 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Lieferung</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+	<link rel="stylesheet" type="text/css"
+	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
+	
+	<title>Lieferung</title>
 </head>
 <body>
-	
-    <form action="#" th:action="@{/lieferung}" th:object="${lieferung}" method="post">
-    
-     <h3>Aktuell</h3> 
-     <table>
-  		<tr>
-		    <th>Materialtyp</th>
-		    <th>Bezeichnung</th> 
-		    <th>Akt.Bestand</th> 
-		    <th>Seriennummer</th>
-		    <th>Lager</th>  
-		  </tr>
-		  <tr>
-		    <td th:text="${lieferung.material.materialtyp.name}"></td>
-		    <td th:text="${lieferung.material.bezeichnung}"></td>
-		    <td th:text="${lieferung.material.bestand}"></td>
-		    <td th:text="${lieferung.material.seriennummer}"></td>
-		    <td th:text="${lieferung.material.lagerstandort.name}"></td>
-		 </tr>
-     </table>
-     
-	<h3>Lieferschein</h3>
-		 
-       <div class="form-group"
- 	   th:classappend="${#fields.hasErrors('art')}? 'has-error':''">
-        <label for="art" class="control-label">Art</label>
-		 <input type="radio"
-        value="eingabe"
-        th:field="*{art}"/> Eingabe 
-        <input type="radio"
-        value="ausgabe"
-        th:field="*{art}"/> Ausgabe 
-        <p class="error-message"
-        th:each="error: ${#fields.errors('art')}"
-        th:text="${error}">Validation error</p>
-        </div>
-           
-		<div class="form-group"
-        th:classappend="${#fields.hasErrors('menge')}? 'has-error':''">
-        <label for="menge" class="control-label">Menge</label>
-        <input id="menge"
-        type="number"
-        min="1"
-        class="form-control"
-        th:field="*{menge}"/>
-        <p class="error-message"
-       	th:each="error: ${#fields.errors('menge')}"
-        th:text="${error}">Validation error</p>
-       	</div>
-  		
-  		<div class="form-group"
-        th:classappend="${#fields.hasErrors('lieferungsDatum')}? 'has-error':''">
-        <label for="lieferungsDatum" class="control-label">LieferungsDatum</label>
-        <input id="lieferungsDatum"
-        type="date"
-        class="form-control"
-        th:field="*{lieferungsDatum}"/>
-        <p class="error-message"
-       	th:each="error: ${#fields.errors('lieferungsDatum')}"
-        th:text="${error}">Validation error</p>
+<div class="container">
+  <form action="#" th:action="@{/lieferung}" th:object="${lieferung}"
+		method="post">
+
+		<h3>Aktuell</h3>
+		<table class="mainTable">
+			<tr>
+				<th>Materialtyp</th>
+				<th>Bezeichnung</th>
+				<th>Akt.Bestand</th>
+				<th>Seriennummer</th>
+				<th>Lager</th>
+			</tr>
+			<tr>
+				<td th:text="${lieferung.material.materialtyp.name}"></td>
+				<td th:text="${lieferung.material.bezeichnung}"></td>
+				<td th:text="${lieferung.material.bestand}"></td>
+				<td th:text="${lieferung.material.seriennummer}"></td>
+				<td th:text="${lieferung.material.lagerstandort.name}"></td>
+			</tr>
+		</table>
+
+		<h2>Lieferschein</h2>
+
+		<div class="row"
+			th:classappend="${#fields.hasErrors('art')}? 'has-error':''">
+			<div class="col-25">
+			<label for="art">Art:</label> 
+			<div>
+			<input id="eingabe" type="radio" value="eingabe" th:field="*{art}"/> 
+			<label for="eingabe"><span><span></span></span>Eingabe</label> 
+			<input id="ausgabe" type="radio" value="ausgabe" th:field="*{art}"/>
+			<label for="ausgabe"><span><span></span></span>Ausgabe</label> 
+			</div>
+			<p class="error-message" th:each="error: ${#fields.errors('art')}"
+				th:text="${error}">Validation error</p>
+			</div>
 		</div>
-		
-        <div class="form-group"
-        th:classappend="${#fields.hasErrors('beschreibung')}? 'has-error':''">
-        <label for="beschreibung" class="control-label">Beschreibung</label>
-        <input id="beschreibung"
-        class="form-control"
-        th:field="*{beschreibung}"/>
-        <p class="error-message"
-       	th:each="error: ${#fields.errors('beschreibung')}"
-        th:text="${error}">Validation error</p>
-       	</div>
-       	
-     <p><input type="submit" value="Submit" /> </p>
-    </form>
-    
-	<button onclick="goBack()">Abbrechen</button>
+
+		<div class="row"
+			th:classappend="${#fields.hasErrors('menge')}? 'has-error':''">
+		 <div class="col-50">
+			<label for="menge" class="control-label">Menge</label> <input
+				id="menge" type="number" min="1" 
+				th:field="*{menge}" />
+			<p class="error-message" th:each="error: ${#fields.errors('menge')}"
+				th:text="${error}">Validation error</p>
+		 </div>
+		</div>
+
+		<div class="row"
+			th:classappend="${#fields.hasErrors('lieferungsDatum')}? 'has-error':''">
+			<div class="col-50">
+			<label for="lieferungsDatum" class="control-label">Lieferungs Datum</label>
+			<input id="lieferungsDatum" type="date" class="form-control"
+				th:field="*{lieferungsDatum}" />
+			<p class="error-message"
+				th:each="error: ${#fields.errors('lieferungsDatum')}"
+				th:text="${error}">Validation error</p>
+			</div>
+		</div>
+
+		<div class="row"
+			th:classappend="${#fields.hasErrors('beschreibung')}? 'has-error':''">
+			<div class="col-50">
+			<label for="beschreibung" class="control-label">Beschreibung</label>
+			<input id="beschreibung" class="form-control" type="text"
+				th:field="*{beschreibung}" placeholder="Beschreibung.."/>
+			<p class="error-message"
+				th:each="error: ${#fields.errors('beschreibung')}"
+				th:text="${error}">Validation error</p>
+			</div>
+		</div>
+
+		<p>
+			<input type="submit" value="Submit" />
+		</p>
+
+	<button onclick="goBack()" class="bigButtons">Abbrechen</button>
 	<script>
-	function goBack() {
-	    window.history.back();
-	}
+		function goBack() {
+			window.history.back();
+		}
 	</script>
 
+  </form>
+ </div>
 </body>
 </html>
