--- a/src/main/resources/templates/mateinupdate.html
+++ b/src/main/resources/templates/mateinupdate.html
@@ -1,11 +1,19 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	<meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
+    
     <title>Material-Einheitentyp Aktualisieren</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<h1>Material-Einheitentyp</h1>
+	<h1>Materialtypen ändern</h1>
+<div class="container">
     <form action="#" th:action="@{/mateinupdate/{id}(id=${materialtyp_einheitentyp.id})}" th:object="${materialtyp_einheitentyp}" method="post">
     	
 		<p class="error-message"
@@ -13,48 +21,53 @@
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>
        	
-       	<div class="form-group"
+       	<div class="row"
         th:classappend="${#fields.hasErrors('einheitentyp')}? 'has-error':''">
+        <div class="col-50">
         <label for="einheitentyp" class="control-label">Einheitentyp</label>
-        <p th:text="${materialtyp_einheitentyp.einheitentyp.name}" ></p>
+        <p th:text="${materialtyp_einheitentyp.einheitentyp.name}" style="font-size: 22px; color:darkred; text-decoration: underline;" >
+        </div>
 		<p class="error-message"
        	th:each="error: ${#fields.errors('einheitentyp')}"
         th:text="${error}">Validation error</p>
        	</div>     		  	
     	
-    	<div class="form-group"
-        th:classappend="${#fields.hasErrors('manzahl')}? 'has-error':''">
-        <label for="manzahl" class="control-label">Anzahl des Materialtyps</label>
-        <input id="manzahl"
-        type="number"
-        min="1"
-        class="form-control"
-        th:field="*{manzahl}"/>
-        <p class="error-message"
-       	th:each="error: ${#fields.errors('manzahl')}"
-        th:text="${error}">Validation error</p>
-       	</div>                 	
-		
-		<div class="form-group"
+    	<div class="row"
         th:classappend="${#fields.hasErrors('materialtyp')}? 'has-error':''">
+        <div class="col-50">
         <label for="materialtyp" class="control-label">Materialtyp</label>
         <select th:field="*{materialtyp}">
   			<option th:each="materialtyp : ${alleMaterialtypen}" 
          	 th:value="${materialtyp.id}" 
        	     th:text="${materialtyp.name}"></option>
-		</select></p>
+		</select>
+		</div>
 		<p class="error-message"
        	th:each="error: ${#fields.errors('materialtyp')}"
         th:text="${error}">Validation error</p>
        	</div> 
+    	
+    	<div class="row"
+        th:classappend="${#fields.hasErrors('manzahl')}? 'has-error':''">
+       	<div class="col-50">
+        	<label for="manzahl" class="control-label">Anzahl des Materialtyps</label>
+        	<input id="manzahl" type="number" min="1" th:field="*{manzahl}"/>
+        </div>
+        <p class="error-message"
+       	th:each="error: ${#fields.errors('manzahl')}"
+        th:text="${error}">Validation error</p>
+       	</div>                 	
 		
-        <p><input type="submit" value="Submit" /> </p>
+        <p><input type="submit" value="Submit" />
+        <button onclick="goBack()" class="bigButtons">Abbrechen</button>
+			<script>
+			function goBack() {
+			    window.history.back();
+			}
+			</script>
+		</p>
     </form>
-	<button onclick="goBack()">Abbrechen</button>
-	<script>
-	function goBack() {
-	    window.history.back();
-	}
-	</script>
+</div>
+	
 </body>
 </html>
