--- a/src/main/resources/templates/veranstaltung.html
+++ b/src/main/resources/templates/veranstaltung.html
@@ -10,19 +10,17 @@
  	<link rel="stylesheet" th:href="@{/css/index.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
 </head>
-	<body>
+<body class="genBackground">
 		<head th:replace="/fragment/header :: header"></head>	
 		<div th:replace="/fragment/footer :: footer"></div>
 		
 		<title th:text="@{${@environment.getProperty('matilda.events')}}"></title>
-		
-<a href="#" data-th-href="@{/neuveranstaltung}">Eine neue Veranstaltung hinzufügen</a>
 <h2>Übersicht Veranstaltungen</h2>
 <div th:unless="${#lists.isEmpty(veranstaltungen)}">
-<table class="table table-striped">
+<table class="mainTable" id="sortTable">
 <thead>
 <tr>
-<th>Name</th>
+<th edite="false">Name</th>
 <th>Lagerstandort</th>
 <th>Beginn</th>
 <th>Ende</th>
@@ -39,16 +37,24 @@
 <td th:text="${veranstaltung.zustand}"></td>
 <td th:text="${veranstaltung.modifiedBy}"></td>
 <td>
-<a href="#" data-th-href="@{/veranstaltungupdate/{id}(id=${veranstaltung.id})}">&Auml;ndern</a>
+	<a href="#" data-th-href="@{/veranstaltungupdate/{id}(id=${veranstaltung.id})}">
+	<input type="Button" value="Ändern" class="buttons"/>
+	</a>
 </td>
 <td>
-<a href="#" data-th-href="@{/veranstaltungeinheit/{id}(id=${veranstaltung.id})}"> -> Einheitentyp</a>
+	<a href="#" data-th-href="@{/veranstaltungeinheit/{id}(id=${veranstaltung.id})}">
+	<input type="Button" value="Einheitentyp" class="buttons"/>
+	</a>
 </td>
 <td>
-<a href="#" data-th-href="@{/veranstaltungbuchung/{id}(id=${veranstaltung.id})}"> -> Buchen</a>
+	<a href="#" data-th-href="@{/veranstaltungbuchung/{id}(id=${veranstaltung.id})}">
+	<input type="Button" value="Buchen" class="buttons"/>
+	</a>
 </td>
 <td>
-<a href="#" data-th-href="@{/veranstaltunggebucht/{id}(id=${veranstaltung.id})}">Gebuchte Materialien</a>
+	<a href="#" data-th-href="@{/veranstaltunggebucht/{id}(id=${veranstaltung.id})}">
+	<input type="Button" value="gebuchtes Material" class="buttons"/>
+	</a>
 </td>
 
 </tr>
@@ -57,9 +63,10 @@
 <div th:if="${#lists.isEmpty(veranstaltungen)}">
 <p>Es gibt keine Veranstaltung</p>
 </div>
+	<a href="#" data-th-href="@{/neuveranstaltung}">
+	<input type="Button" value="neue Veranstaltung erstellen" class="bigButtons"/>
+	</a>
 <hr/>
-<div class="container">
-
             <div th:if="${param.success}">
                 <div class="alert alert-info">
                     Die neue Veranstaltung wurde erfolgreich eingetragen!
@@ -110,7 +117,6 @@
                    	Gebuchte Materialien wurde storniert.
                 </div>
             </div>
-            
-</div>
+<script type="text/javascript" th:src="@{/js/sortTable.js}"/></script>
 </body>
 </html>
