--- a/src/main/resources/templates/veranstaltungbuchung.html
+++ b/src/main/resources/templates/veranstaltungbuchung.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
- 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
+ 	
  	<link rel="import" href="/fragment/topnav.html">
 </head>
 	<body>
@@ -18,7 +20,7 @@
 		
 <h1>Buchung Übersicht</h1>
 <div th:unless="${#lists.isEmpty(veranstaltunggebucht)}">
-<table class="table table-striped">
+<table class="mainTable">
 <thead>
 <tr>
 <th>Bezeichnung</th>
@@ -41,15 +43,21 @@
 </table>
 </div>
 <hr/>
+<div class="container">
 <form action="#" th:action="@{/veranstaltungstornieren}" th:object="${veranstaltung}" method="post">
 <p><input type="submit" value="Stornieren" /> </p>
+<input type="button" value="Zurück" onclick="goBack()" class="bigButtons"/>
+			<script>
+			function goBack() {
+			    window.history.back();
+			}
+			</script>
 </form>
-<div class="container">
+</div>
 	<div th:if="${param.nostorno}">
 		<div class="alert alert-info">
 			Stornieren einer Veranstaltung ist nur im Gebuchtzustand möglich!
 		</div>
 	</div>
-</div>
 </body>
 </html>
