--- a/src/main/resources/templates/veranstaltungeinheit.html
+++ b/src/main/resources/templates/veranstaltungeinheit.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-<title>Veranstaltung-Einheitentyp</title>
+	<link rel="stylesheet" type="text/css"
+	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
+
+	<title>Veranstaltung-Einheitentyp</title>
 </head>
 <body>
 <h3>Einen Veranstaltung-Einheitentyp hinzufügen</h3>
+<div class="container">
 <form action="#" th:action="@{/veranstaltungeinheit}" th:object="${veranstaltung_einheitentyp}" method="post">
 		
 		<p class="error-message"
@@ -18,34 +22,38 @@
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>
  		
-	    <div class="form-group"
+	    <div class="row"
         th:classappend="${#fields.hasErrors('einheitentyp')}? 'has-error':''">
+        <div class="col-50">
         <label for="einheitentyp" class="control-label">Einheitentyp</label>
         <select th:field="*{einheitentyp}">
   			<option th:each="einheitentyp : ${alleEinheitentypen}" 
          	 th:value="${einheitentyp.id}" 
        	     th:text="${einheitentyp.name}"></option>
 		</select></p>		
+		</div>
 		<p class="error-message"
        	th:each="error: ${#fields.errors('einheitentyp')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-       	<div class="form-group"
+       	<div class="row"
         th:classappend="${#fields.hasErrors('bezeichnung')}? 'has-error':''">
+        <div class="col-50">
         <label for="bezeichnung" class="control-label">Bezeichnung</label>
     	<input type="text" th:field="*{bezeichnung}" /></p>
+    	</div>
    		<p class="error-message"
        	th:each="error: ${#fields.errors('bezeichnung')}"
         th:text="${error}">Validation error</p>
        	</div>
-       	
         <p><input type="submit" value="Submit" /> </p>
 </form>
-<h2>Übersicht Veranstaltungen->Einheitentyp</h2>
+</div>
 
+<h2>Übersicht Veranstaltungen->Einheitentyp</h2>
 <div th:unless="${#lists.isEmpty(verein)}">
-<table class="table table-striped">
+<table class="mainTable">
 <thead>
 <tr>
 <th>Veranstaltung</th>
@@ -65,9 +73,15 @@
 <p>Es gibt keine Veranstaltung</p>
 </div>
 <hr/>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+
+<input type="button" value="Zurück" onClick="gotoVeranstaltung()" class="bigButtons"/>
+				<script>
+					function gotoVeranstaltung()
+					{
+						window.location.href="../veranstaltung";
+					}
+				</script>
+      <div class="col-md-6 col-md-offset-3">
             <div th:if="${param.success}">
                 <div class="alert alert-info">
                     Die neue Veranstaltung wurde erfolgreich eingetragen!
@@ -77,8 +91,8 @@
                 <div class="alert alert-info">
                     Die Veranstaltung wurde erfolgreich gelöscht!
                 </div>
-            </div>           
-</div>
+            </div> 
+       </div>
 
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
