--- a/src/main/resources/templates/veranstaltungupdate.html
+++ b/src/main/resources/templates/veranstaltungupdate.html
@@ -1,11 +1,20 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+	<link rel="stylesheet" type="text/css"
+	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
+	
     <title>Materialtyp Aktualisieren</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 	<h1>Veranstaltung</h1>
+<div class="container">
     <form action="#" th:action="@{/veranstaltungupdate/{id}(id=${veranstaltung.id})}" th:object="${veranstaltung}" method="post">
     	
     	<p class="error-message"
@@ -13,49 +22,47 @@
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>
                    
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
+        <div class="col-50">
         <label for="name" class="control-label">Name</label>
-        <input id="name"
-        class="form-control"
-        th:field="*{name}"/>
+        <input id="name" type="text" th:field="*{name}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('name')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('beginn')}? 'has-error':''">
+        <div class="col-50">
         <label for="beginn" class="control-label">Beginn</label>
-        <input id="beginn"
-        type="datetime-local"
-        class="form-control"
-        th:field="*{beginn}"/>
+        <input id="beginn" type="datetime-local" th:field="*{beginn}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('beginn')}"
         th:text="${error}">Validation error</p>
 		</div>
 		
-    	<div class="form-group"
+    	<div class="row"
         th:classappend="${#fields.hasErrors('ende')}? 'has-error':''">
+        <div class="col-50">
         <label for="ende" class="control-label">Ende</label>
-        <input id="ende"
-        type="datetime-local"
-        class="form-control"
-        th:field="*{ende}"/>
+        <input id="ende" type="datetime-local" th:field="*{ende}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('ende')}"
         th:text="${error}">Validation error</p>
 		</div>
     	
         <p><input type="submit" value="Submit" /> </p>
+        <button onclick="goBack()" class="bigButtons">Abbrechen</button>
+			<script>
+			function goBack() {
+			    window.history.back();
+			}
+			</script>
     </form>
-    
-	<button onclick="goBack()">Abbrechen</button>
-	<script>
-	function goBack() {
-	    window.history.back();
-	}
-	</script>
+</div>
 </body>
 </html>
